# mono2microAgent

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/mono2microagent/: crew.py  main.py
src/mono2microagent/config/: agents.yaml  tasks.yaml
test/: LegacyStockManagement_COBOL_modernization_blueprint.md  LegacyStockManagement_COBOL_refactoring_blueprint.md  WebGoat_v3_modernization_blueprint.md  nopCommerce_modernization_blueprint.md
tests/: LegacyStockManagement_COBOL_refactoring_blueprint.md  nopCommerce_refactoring_blueprint.md
