[project]
name = "mono2microagent"
version = "0.1.0"
description = "mono2microAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.12,<1.13"
]

[project.scripts]
mono2microagent = "mono2microagent.main:run"
run_crew = "mono2microagent.main:run"
train = "mono2microagent.main:train"
replay = "mono2microagent.main:replay"
test = "mono2microagent.main:test"
run_with_trigger = "mono2microagent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]

[tool.crewai]
type = "crew"
